--- a/solutions/day-01-report-repair.ipynb
+++ b/solutions/day-01-report-repair.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -75,6 +75,62 @@
    "source": [
     "answer = num * second_num\n",
     "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part II"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I got this snippet online\n",
+    "\n",
+    "def three_sum(nums):\n",
+    "    # Using 3sum strategy\n",
+    "    # Fix the lowest number and run 2sum on the remaining array\n",
+    "    res = []\n",
+    "    nums.sort()\n",
+    "    for i in range(len(nums)-2):\n",
+    "        if i > 0 and nums[i] == nums[i-1]:\n",
+    "            continue\n",
+    "        l, r = i+1, len(nums)-1\n",
+    "        while l < r:\n",
+    "            s = nums[i] + nums[l] + nums[r]\n",
+    "            if s < 2020:\n",
+    "                l +=1\n",
+    "            elif s > 2020:\n",
+    "                r -= 1\n",
+    "            else:\n",
+    "                return (nums[i], nums[l], nums[r])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(72, 897, 1051)\n",
+      "67877784\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer_2 = three_sum(data)\n",
+    "print(answer_2)\n",
+    "\n",
+    "from functools import reduce\n",
+    "print(reduce((lambda x, y: x*y), answer_2))"
    ]
   }
  ],
