--- a/solutions/day-01-report-repair.ipynb
+++ b/solutions/day-01-report-repair.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task:\n",
+    "## Part I Task\n",
+    "\n",
     "1. Given an input list\n",
     "2. Find two entries that sum to 2020\n",
     "3. Multiply the two entries together\n",
@@ -13,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,12 +82,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part II"
+    "## Part II Task\n",
+    "\n",
+    "1. Given an input list\n",
+    "2. Find _three_ entries that sum to 2020\n",
+    "3. Multiply the three entries together\n",
+    "4. Return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
