--- a/solutions_2021/Solution For 2021-12-05.ipynb
+++ b/solutions_2021/Solution For 2021-12-05.ipynb
@@ -6,11 +6,11 @@
    "id": "21553c95-c140-46a1-b853-47aede988ec3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-15T02:01:24.890774Z",
-     "iopub.status.busy": "2021-12-15T02:01:24.890488Z",
-     "iopub.status.idle": "2021-12-15T02:01:24.897972Z",
-     "shell.execute_reply": "2021-12-15T02:01:24.897056Z",
-     "shell.execute_reply.started": "2021-12-15T02:01:24.890748Z"
+     "iopub.execute_input": "2021-12-15T02:02:45.242623Z",
+     "iopub.status.busy": "2021-12-15T02:02:45.241496Z",
+     "iopub.status.idle": "2021-12-15T02:02:45.245992Z",
+     "shell.execute_reply": "2021-12-15T02:02:45.245356Z",
+     "shell.execute_reply.started": "2021-12-15T02:02:45.242598Z"
     },
     "tags": []
    },
@@ -19,39 +19,22 @@
     "input_location = \"inputs/input_20211205.txt\"\n",
     "\n",
     "with open(input_location) as f:\n",
-    "    data = f.read().splitlines()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a8145afd-99ca-4de0-9781-cc061c6bac4e",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-15T02:01:24.899399Z",
-     "iopub.status.busy": "2021-12-15T02:01:24.899216Z",
-     "iopub.status.idle": "2021-12-15T02:01:24.904809Z",
-     "shell.execute_reply": "2021-12-15T02:01:24.903766Z",
-     "shell.execute_reply.started": "2021-12-15T02:01:24.899380Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "    data = f.read().splitlines()\n",
+    "    \n",
     "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "56143f51-2d52-4d12-b7b3-ebb7f85ddba4",
+   "execution_count": 2,
+   "id": "5bb9b79d-4ef9-4e19-9a9a-c36e2178a54b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-15T02:01:24.908876Z",
-     "iopub.status.busy": "2021-12-15T02:01:24.908549Z",
-     "iopub.status.idle": "2021-12-15T02:01:24.913444Z",
-     "shell.execute_reply": "2021-12-15T02:01:24.912933Z",
-     "shell.execute_reply.started": "2021-12-15T02:01:24.908850Z"
+     "iopub.execute_input": "2021-12-15T02:02:45.247732Z",
+     "iopub.status.busy": "2021-12-15T02:02:45.247171Z",
+     "iopub.status.idle": "2021-12-15T02:02:45.254101Z",
+     "shell.execute_reply": "2021-12-15T02:02:45.252129Z",
+     "shell.execute_reply.started": "2021-12-15T02:02:45.247685Z"
     },
     "tags": []
    },
@@ -69,15 +52,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "936b56b2-529f-4106-9129-37f2753d3b9e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-15T02:01:24.914881Z",
-     "iopub.status.busy": "2021-12-15T02:01:24.914470Z",
-     "iopub.status.idle": "2021-12-15T02:01:24.920232Z",
-     "shell.execute_reply": "2021-12-15T02:01:24.919556Z",
-     "shell.execute_reply.started": "2021-12-15T02:01:24.914852Z"
+     "iopub.execute_input": "2021-12-15T02:02:45.256409Z",
+     "iopub.status.busy": "2021-12-15T02:02:45.255173Z",
+     "iopub.status.idle": "2021-12-15T02:02:45.262224Z",
+     "shell.execute_reply": "2021-12-15T02:02:45.261499Z",
+     "shell.execute_reply.started": "2021-12-15T02:02:45.256372Z"
     },
     "tags": []
    },
@@ -112,15 +95,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c575afb7-f9a7-4015-859a-c1fa9aa36c7c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-15T02:01:24.921608Z",
-     "iopub.status.busy": "2021-12-15T02:01:24.921316Z",
-     "iopub.status.idle": "2021-12-15T02:01:24.928895Z",
-     "shell.execute_reply": "2021-12-15T02:01:24.928335Z",
-     "shell.execute_reply.started": "2021-12-15T02:01:24.921587Z"
+     "iopub.execute_input": "2021-12-15T02:02:45.265088Z",
+     "iopub.status.busy": "2021-12-15T02:02:45.263697Z",
+     "iopub.status.idle": "2021-12-15T02:02:45.272193Z",
+     "shell.execute_reply": "2021-12-15T02:02:45.271564Z",
+     "shell.execute_reply.started": "2021-12-15T02:02:45.265053Z"
     },
     "tags": []
    },
@@ -165,15 +148,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "67b7049d-1e99-4ecd-9d41-c3f96e9b0ca4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-15T02:01:24.930191Z",
-     "iopub.status.busy": "2021-12-15T02:01:24.929877Z",
-     "iopub.status.idle": "2021-12-15T02:01:25.118490Z",
-     "shell.execute_reply": "2021-12-15T02:01:25.118040Z",
-     "shell.execute_reply.started": "2021-12-15T02:01:24.930110Z"
+     "iopub.execute_input": "2021-12-15T02:02:45.276461Z",
+     "iopub.status.busy": "2021-12-15T02:02:45.273387Z",
+     "iopub.status.idle": "2021-12-15T02:02:45.455126Z",
+     "shell.execute_reply": "2021-12-15T02:02:45.454572Z",
+     "shell.execute_reply.started": "2021-12-15T02:02:45.276425Z"
     },
     "tags": []
    },
