Renamed fish to octopus lol

--- a/solutions_2021/Solution For 2021-12-11.ipynb
+++ b/solutions_2021/Solution For 2021-12-11.ipynb
@@ -6,11 +6,11 @@
    "id": "21553c95-c140-46a1-b853-47aede988ec3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-16T05:47:19.221838Z",
-     "iopub.status.busy": "2021-12-16T05:47:19.221647Z",
-     "iopub.status.idle": "2021-12-16T05:47:19.228338Z",
-     "shell.execute_reply": "2021-12-16T05:47:19.227720Z",
-     "shell.execute_reply.started": "2021-12-16T05:47:19.221821Z"
+     "iopub.execute_input": "2021-12-16T15:43:20.605203Z",
+     "iopub.status.busy": "2021-12-16T15:43:20.604962Z",
+     "iopub.status.idle": "2021-12-16T15:43:20.612355Z",
+     "shell.execute_reply": "2021-12-16T15:43:20.611787Z",
+     "shell.execute_reply.started": "2021-12-16T15:43:20.605160Z"
     },
     "tags": []
    },
@@ -28,11 +28,11 @@
    "id": "a72f5ebd-1977-4b28-9bef-be6d8699f507",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-16T05:47:19.229629Z",
-     "iopub.status.busy": "2021-12-16T05:47:19.229396Z",
-     "iopub.status.idle": "2021-12-16T05:47:19.241790Z",
-     "shell.execute_reply": "2021-12-16T05:47:19.241063Z",
-     "shell.execute_reply.started": "2021-12-16T05:47:19.229610Z"
+     "iopub.execute_input": "2021-12-16T15:43:20.613522Z",
+     "iopub.status.busy": "2021-12-16T15:43:20.613252Z",
+     "iopub.status.idle": "2021-12-16T15:43:20.625716Z",
+     "shell.execute_reply": "2021-12-16T15:43:20.625290Z",
+     "shell.execute_reply.started": "2021-12-16T15:43:20.613497Z"
     },
     "tags": []
    },
@@ -57,13 +57,13 @@
     "\n",
     "\n",
     "def convert_data_to_map(data):\n",
-    "    fish_map = []\n",
+    "    oct_map = []\n",
     "    for row in data:\n",
     "        cleaned_row = [int(x) for x in row]\n",
-    "        fish_map.append(cleaned_row)\n",
+    "        oct_map.append(cleaned_row)\n",
     "\n",
-    "    padded_fish_map = pad_map(fish_map)\n",
-    "    return padded_fish_map\n",
+    "    padded_oct_map = pad_map(oct_map)\n",
+    "    return padded_oct_map\n",
     "\n",
     "\n",
     "def return_adjacent_coordinates(base_coordinate):\n",
@@ -81,40 +81,40 @@
     "    return adjacent_coordinates\n",
     "\n",
     "\n",
-    "def process_single_step(fish_map):\n",
+    "def process_single_step(oct_map):\n",
     "    \"\"\"\n",
     "    Mechanics for running a single step\n",
     "    \"\"\"\n",
-    "    for x in range(1, len(fish_map) - 1):\n",
-    "        for y in range(1, len(fish_map) - 1):\n",
-    "            fish_map[x][y] += 1\n",
+    "    for x in range(1, len(oct_map) - 1):\n",
+    "        for y in range(1, len(oct_map) - 1):\n",
+    "            oct_map[x][y] += 1\n",
     "\n",
     "    flashes_remaining = True\n",
     "    flash_count = 0\n",
     "\n",
-    "    # basically loop through the fish_map for that step until there are no other changes\n",
+    "    # basically loop through the oct_map for that step until there are no other changes\n",
     "    while flashes_remaining:\n",
-    "        fish_map_copy = [fish_row[:] for fish_row in fish_map]  # keep reference\n",
+    "        oct_map_copy = [oct_row[:] for oct_row in oct_map]  # keep reference\n",
     "\n",
-    "        for x in range(1, len(fish_map) - 1):\n",
-    "            for y in range(1, len(fish_map) - 1):\n",
-    "                single_oct_energy = fish_map[x][y]\n",
+    "        for x in range(1, len(oct_map) - 1):\n",
+    "            for y in range(1, len(oct_map) - 1):\n",
+    "                single_oct_energy = oct_map[x][y]\n",
     "                if single_oct_energy >= 10:\n",
     "                    # get all the adjacent coordinates and increase by 1\n",
     "                    adjacent_coordinates = return_adjacent_coordinates((x, y))\n",
     "                    for adjacent_oct_coordinates in adjacent_coordinates:\n",
     "                        adj_x, adj_y = adjacent_oct_coordinates\n",
-    "                        adjacent_oct_energy = fish_map[adj_x][adj_y]\n",
+    "                        adjacent_oct_energy = oct_map[adj_x][adj_y]\n",
     "                        if adjacent_oct_energy > 0:  # basically leave alone if it's -inf or 0\n",
-    "                            fish_map[adj_x][adj_y] += 1\n",
-    "                    fish_map[x][y] = 0\n",
+    "                            oct_map[adj_x][adj_y] += 1\n",
+    "                    oct_map[x][y] = 0\n",
     "                    flash_count += 1\n",
     "\n",
     "        # no further updates means excit out of the loop\n",
-    "        if fish_map_copy == fish_map:\n",
+    "        if oct_map_copy == oct_map:\n",
     "            flashes_remaining = False\n",
     "\n",
-    "    return (fish_map, flash_count)"
+    "    return (oct_map, flash_count)"
    ]
   },
   {
@@ -123,11 +123,11 @@
    "id": "7ec29b10-d6b1-441e-bfab-ea09ae4a652c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-16T05:47:19.243024Z",
-     "iopub.status.busy": "2021-12-16T05:47:19.242785Z",
-     "iopub.status.idle": "2021-12-16T05:47:19.246926Z",
-     "shell.execute_reply": "2021-12-16T05:47:19.246328Z",
-     "shell.execute_reply.started": "2021-12-16T05:47:19.243004Z"
+     "iopub.execute_input": "2021-12-16T15:43:20.626606Z",
+     "iopub.status.busy": "2021-12-16T15:43:20.626356Z",
+     "iopub.status.idle": "2021-12-16T15:43:20.630003Z",
+     "shell.execute_reply": "2021-12-16T15:43:20.629590Z",
+     "shell.execute_reply.started": "2021-12-16T15:43:20.626589Z"
     },
     "tags": []
    },
@@ -137,23 +137,23 @@
     "\n",
     "\n",
     "def solution_1(data, days):\n",
-    "    fish_map = convert_data_to_map(data)\n",
+    "    oct_map = convert_data_to_map(data)\n",
     "    total_flash_counts = 0\n",
     "\n",
     "    for i in range(1, days + 1):\n",
-    "        fish_map, flash_count = process_single_step(fish_map)\n",
+    "        oct_map, flash_count = process_single_step(oct_map)\n",
     "        total_flash_counts += flash_count\n",
     "\n",
     "    return total_flash_counts\n",
     "\n",
     "\n",
     "def solution_2(data):\n",
-    "    fish_map = convert_data_to_map(data)\n",
+    "    oct_map = convert_data_to_map(data)\n",
     "    flash_count, steps = 0, 0\n",
     "\n",
     "    # basically keep running until there are total of 100 flashes\n",
     "    while flash_count < 100:\n",
-    "        fish_map, flash_count = process_single_step(fish_map)\n",
+    "        oct_map, flash_count = process_single_step(oct_map)\n",
     "        steps += 1\n",
     "\n",
     "    return steps"
@@ -165,11 +165,11 @@
    "id": "7fe6f85b-d94d-4ca3-9e68-5e7bb26ffa69",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-16T05:47:19.248314Z",
-     "iopub.status.busy": "2021-12-16T05:47:19.247954Z",
-     "iopub.status.idle": "2021-12-16T05:47:19.289007Z",
-     "shell.execute_reply": "2021-12-16T05:47:19.288535Z",
-     "shell.execute_reply.started": "2021-12-16T05:47:19.248295Z"
+     "iopub.execute_input": "2021-12-16T15:43:20.631069Z",
+     "iopub.status.busy": "2021-12-16T15:43:20.630776Z",
+     "iopub.status.idle": "2021-12-16T15:43:20.672790Z",
+     "shell.execute_reply": "2021-12-16T15:43:20.672004Z",
+     "shell.execute_reply.started": "2021-12-16T15:43:20.631053Z"
     },
     "tags": []
    },
@@ -187,7 +187,7 @@
     "########## OUTPUT ##########\n",
     "\n",
     "print(solution_1(data, 100))  # 1644\n",
-    "print(solution_2(data))  # 229"
+    "print(solution_2(data))       # 229"
    ]
   }
  ],
